--- a/LandingPage.css
+++ b/LandingPage.css
@@ -1,10 +1,91 @@
 body { 
-background-image: ; 
+	background-image: url(Metanoia7.png); 
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+h1{ 
+	color: white;
+	text-align: center;
+	font-size: 90px;
+	font-family: Palatino;
+	cursor:pointer;
+ }
+
+h2{
+	text-align: center;
+	font-family: Palatino;
+	font-size: 30px;
+}
+h3{
+	color: black;
+	text-align: center;
+	font-size: 30px;
+	text-decoration:;
 }
 
+#EMAIL{ 
+	font-size:30px;
+ }
 form {
-	background-color: grey;
-	border-radius: 100px; border-style: outset; border-width: 10px;
+	background-color:;
+	border-radius: 5px; border-style:; border-width: 2px;
 	margin: 0 auto;
-	padding: 30px; 
+	padding: 0px; 
 	width: 450px;
+	cursor: pointer;
+	text-align: center;
+}
+
+input{
+	width: 250px;
+	font-size: 24px;
+	border-radius: 10px;
+	border: 5px solid black;
+	cursor: pointer;
+}
+
+button{
+	
+	background: black;
+	color: purple; font-weight: bold; font-family: palatino;
+	border:2px solid black; border-style:; border-width: 5px;
+	font-size: 20px;
+	margin:0 auto;
+	border-radius: 5px;	
+
+}
+
+ p{
+ 	color: white;
+ 	text-align: center;
+ 	font-size: 20px;
+ 	font-family: palatino;
+ }
+
+.image2{
+	width: ;
+}
+img { 
+	width: 200px;
+	 }
+
+#conteneur1{
+	display:flex;
+	justify-content: center;
+	flex-direction: row-reverse;
+	align-items: center;
+}
+
+#conteneur2{
+	display: flex;
+	justify-content:center;
+}
+
+
+@media screen and(min-widht:500px;){
+	section {
+		background:white;
+
+	}
+
+}
