--- a/LandingPage.css
+++ b/LandingPage.css
@@ -26,7 +26,6 @@ h3{
 #EMAIL{ 
 	font-size:30px;
  }
-
 form {
 	background-color:;
 	border-radius: 5px; border-style:; border-width: 2px;
@@ -53,10 +52,8 @@ button{
 	font-size: 20px;
 	margin:0 auto;
 	border-radius: 5px;	
+
 }
-
-button:hover{animation:pulsation_bouton .8s ease-out 1 forwards}
-
 
  p{
  	color: white;
@@ -65,11 +62,10 @@ button:hover{animation:pulsation_bouton .8s ease-out 1 forwards}
  	font-family: palatino;
  }
 
-.image3{
-	width: 200px;
+.image2{
+	width: ;
 }
-
-.image1 { 
+img { 
 	width: 200px;
 	 }
 
@@ -85,40 +81,11 @@ button:hover{animation:pulsation_bouton .8s ease-out 1 forwards}
 	justify-content:center;
 }
 
-#conteneur3{
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
+
+@media screen and(min-widht:500px;){
+	section {
+		background:white;
+
+	}
+
 }
-
-@media screen and (max-width:600px)
-{
-	h1{
-		font-size: 60px;
-		text-decoration: 
-	}
-
-	h2{
-		font-size: 20px;
-	}
-	h3{
-		font-size: 20px;
-	}
-	p{
-		font-size: 15px;
-	}
-	.image1, .image3{
-		width: 100px;
-	}
-	input{
-		width: 150px;
-		font-size: 14px;
-	}
-	button{
-		font-size: 10px;
-	}
-}
-
-
-
