--- a/LandingPage.css
+++ b/LandingPage.css
@@ -14,13 +14,24 @@ h1{
 h2{
 	text-align: center;
 	font-family: Palatino;
-	font-size: 30px;
+	font-size: 35px;
 }
 h3{
 	color: black;
 	text-align: center;
 	font-size: 30px;
 	text-decoration:;
+}
+h4{
+	text-align: center;
+	font-size: 25px;
+	font-weight: bold;
+	color: white;
+}
+h5{
+	font-size: 23px;
+	color: black;
+	font-family: Palatino;
 }
 
 #EMAIL{ 
@@ -35,7 +46,9 @@ form {
 	cursor: pointer;
 	text-align: center;
 }
-
+form:hover{
+	transform: rotate(10deg);
+}
 input{
 	width: 250px;
 	font-size: 24px;
@@ -43,49 +56,82 @@ input{
 	border: 5px solid black;
 	cursor: pointer;
 }
-
 button{
-	
 	background: black;
 	color: purple; font-weight: bold; font-family: palatino;
 	border:2px solid black; border-style:; border-width: 5px;
 	font-size: 20px;
 	margin:0 auto;
 	border-radius: 5px;	
-
 }
-
  p{
  	color: white;
  	text-align: center;
  	font-size: 20px;
  	font-family: palatino;
  }
-
-.image2{
-	width: ;
+.image1,.image3{
+	width: 150px;
 }
 img { 
-	width: 200px;
-	 }
-
+	width: 70px;
+}
+img:hover{
+	transform: rotate(10deg);
+}
 #conteneur1{
 	display:flex;
 	justify-content: center;
 	flex-direction: row-reverse;
 	align-items: center;
 }
-
 #conteneur2{
 	display: flex;
-	justify-content:center;
+	justify-content: center;
+	align-items: center;
 }
+#conteneur4{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+#conteneur3{
+	display: flex;
+	justify-content: space-around;
+}
+.Icone:hover{
+	transform: rotate(15deg);
+}
+.FlexBox3{
+	display:flex;
+	align-items: center;
+	flex-direction: column; 
 
+ }
 
-@media screen and(min-widht:500px;){
-	section {
-		background:white;
-
+@media screen and (min-width: 300px;)
+{
+	h1 {
+		font-size: 30px;
+		text-decoration: 
 	}
-
+	h2 {
+		font-size: 17px;
+	}
+	h3 {
+		font-size: 15px;
+	}
+	p {
+		font-size: 11px;
+	}
+	.image1,.image3{
+		width: 100px;
+	}
+	input {
+		width: 150px;
+		font-size: 14px;
+	}
+	button {
+		font-size: 10px;
+	}
 }
